[project]
name = "argparse-subdec"
version = "0.2.4"
description = ""  # Add a description if available
readme = "README.rst"
requires-python = ">=3.10"  # Adjust as needed
license = {text = "Mozilla Public License 2.0 (MPL 2.0)"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/guludo/python-argparse-subdec"

[project.optional-dependencies]
dev = [
    "pytest>=6.2,<7",
    "coverage>=5.5,<6",
    "mypy>=0.910,<1",
]
tests = [
    "pytest>=6.2,<7",
    "coverage>=5.5,<6",
]
all = [
    "pytest>=6.2,<7",
    "coverage>=5.5,<6",
    "mypy>=0.910,<1",
]

[tool.setuptools]
packages = ["argparse_subdec"]

[tool.setuptools.package-data]
argparse_subdec = ["py.typed"]

[build-system]
requires = ["setuptools>=45", "wheel"]  # Adjust as needed
build-backend = "setuptools.build_meta"